--- a/list.html
+++ b/list.html
@@ -296,6 +296,24 @@
         </div>
     </div>
     <!-- 列表页主体end -->
+    <!-- 跳转行start -->
+    <div class="jump">
+        <ul>
+            <li><a href="#" class="prev">&lt;&lt;上一页</a></li>
+            <li><a href="#" class="current">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#">6</a></li>
+            <li><a href="#" class="ellipsis">...</a></li>
+            <li><a href="#" class="next">&gt;&gt;下一页</a></li>
+            到第
+            <input type="text">
+            页
+            <button>确定</button>
+        </ul>
+    </div>
+    <!-- 跳转行end -->
     <!-- 底部模块start -->
     <footer>
         <div class="w">
