--- a/detail.html
+++ b/detail.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/detail.css">
 </head>
+
 <body>
     <!-- 快捷导航模块 start -->
     <section class="shortcut">
@@ -99,6 +100,178 @@
         </div>
     </nav>
     <!-- 导航栏模块end -->
+    <!-- 主体模块start -->
+    <div class="de_container w">
+        <!-- 面包屑导航 -->
+        <div class="crumb_wrap">
+            <ul>
+                <li><a href="#">手机、数码、通讯</a><span>&gt;</span></li>
+                <li><a href="#">手机</a><span>&gt;</span></li>
+                <li><a href="#">Apple苹果</a><span>&gt;</span></li>
+                <li><a href="#">iphone 6S Plus系列</a></li>
+            </ul>
+        </div>
+        <!-- 产品介绍模块 -->
+        <div class="product_intro clearfix">
+            <div class="preview_wrap fl">
+                <div class="preview_img">
+                    <img src="upload/s3.png" alt="">
+                </div>
+                <div class="preview_list">
+                    <a href="#" class="arrow_prev"><img src="images/arrow-prev.png" alt=""></a>
+                    <a href="#" class="arrow_next"><img src="images/arrow-next.png" alt=""></a>
+                    <ul>
+                        <li><a href="#"><img src="upload/pre.jpg" alt=""></a></li>
+                        <li class="current"><a href="#"><img src="upload/pre.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="upload/pre.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="upload/pre.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="upload/pre.jpg" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="itemInfo_wrap fr">
+                <div class="sku_name">
+                    Apple iPhone 6s（A1700）64G玫瑰金色 移动通信电信4G手机
+                </div>
+                <div class="news">
+                    推荐选择下方[移动优惠购],手机套餐齐搞定,不用换号,每月还有话费返
+                </div>
+                <dl class="summary_price clearfix">
+                    <dt>价格</dt>
+                    <dd>
+                        <i>￥5299.00 </i>
+                        <a href="#">降价通知</a>
+                    </dd>
+                    <div class="remark">累计评价612188</div>
+                </dl>
+                <dl class="summary_promotion clearfix">
+                    <dt>促销</dt>
+                    <dd>
+                        <p><span> 加购价 </span> 满999.00另加20.00元，或满1999.00另加30.00元，或满2999.00另加40.00元，即可在购物车换 购热销商品 详情 >></p>
+                    </dd>
+                </dl>
+                <dl class="summary_support">
+                    <dt>支持</dt>
+                    <dd>以旧换新，闲置手机回收 4G套餐超值抢 礼品购</dd>
+                </dl>
+                <dl class="choose_color clearfix">
+                    <dt>选择颜色</dt>
+                    <dd>
+                        <a href="#" class="current">玫瑰金</a>
+                        <a href="#">金色</a>
+                        <a href="#">白色</a>
+                        <a href="#">土豪色</a>
+                    </dd>
+                </dl>
+                <dl class="choose_type clearfix">
+                    <dt>选择版本</dt>
+                    <dd>
+                        <a href="#">公开版</a>
+                        <a href="#" class="current">移动4G</a>
+                    </dd>
+                </dl>
+                <dl class="choose_btns clearfix">
+                    <dt>购买方式</dt>
+                    <dd>
+                        <a href="#">官方标配</a>
+                        <a href="#" class="current">移动优惠购</a>
+                        <a href="#">电信优惠购</a>
+                    </dd>
+                </dl>
+                <div class="choose_amount clearfix">
+                    <input type="text" name="" id="" value="1">
+                    <a href="#" class="add">+</a>
+                    <a href="#" class="subtract">-</a>
+                    <a href="#" class="addcar">加入购物车</a>
+                </div>
+            </div>
+        </div>
+        <!-- 产品细节模块 -->
+        <div class="product_detail clearfix">
+            <div class="aside fl">
+                <div class="tab_list clearfix">
+                    <ul>
+                        <li>相关分类</li>
+                        <li>推荐品牌</li>
+                    </ul>
+                </div>
+                <div class="tab_con">
+                    <ul>
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥4599</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥4599</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥4599</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥4599</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                        <li>
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥4599</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                        <li class="last">
+                            <img src="upload/aside_img.jpg" alt="">
+                            <h5>华为 HUAWEI P20 Pro 全面屏徕卡</h5>
+                            <div class="aside_price">￥4599</div>
+                            <a href="#" class="as_addcar">加入购物车</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="detail fr">
+                <div class="detail_tab_list clearfix">
+                    <ul>
+                        <li class="current">商品介绍</li>
+                        <li>规格与包装</li>
+                        <li>售后保障</li>
+                        <li>商品评价（50000）</li>
+                        <li>手机社区</li>
+                    </ul>
+                </div>
+                <div class="detail_tab_con">
+                    <ul>
+                        <li>分辨率：1920*1080(FHD)</li>
+                        <li>后置摄像头：1200万像素</li>
+                        <li>前置摄像头：500万像素</li>
+                        <li>核 数：其他</li>
+                        <li>频 率：以官网信息为准</li>
+                        <li>品牌： Apple ♥关注</li>
+                        <li>商品名称：APPLEiPhone 6s Plus</li>
+                        <li>商品编号：1861098</li>
+                        <li>商品毛重：0.51kg</li>
+                        <li>商品产地：中国大陆</li>
+                        <li>热点：指纹识别，Apple Pay，金属机身，拍照神器</li>
+                        <li>系统：苹果（IOS）</li>
+                        <li>像素：1000-1600万</li>
+                        <li>机身内存：64GB</li>
+                    </ul>
+                    <a href="#" class="more">查看更多参数</a>
+                    <img src="upload/detail_img2.jpg" alt="">
+                    <img src="upload/detail_img3.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 主体模块end -->
+    <!-- 底部模块start -->
     <footer>
         <div class="w">
             <div class="mod_service">
@@ -197,4 +370,5 @@
     </footer>
     <!-- 底部模块end -->
 </body>
+
 </html>
